removed unnecessary 'allocator' variable in many places. Using session instead for allocation.